--- a/index.html
+++ b/index.html
@@ -3,19 +3,27 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tribbe - Instagram para el Gimnasio | Red Social Fitness</title>
-    <meta name="description" content="La red social fitness que combina lo mejor de Instagram con el gym. Registra entrenamientos con fotos, compite con amigos, mantén rachas semanales y visualiza tu progreso en tiempo real." />
+    <title>Tribbe - App Fitness</title>
+    <meta name="description" content="App Fitness que combina lo mejor del gym. Registra entrenamientos con fotos, compite con amigos, mantén rachas semanales y visualiza tu progreso en tiempo real." />
     <meta name="author" content="Tribbe App" />
     <meta name="keywords" content="fitness, gym, red social, entrenamientos, tracking, rachas, competencias, motivación" />
 
+    <!-- favicon -->
+    <link rel="icon" href="src/assets/icon/icon_light.png" />
     <meta property="og:title" content="Tribbe - Instagram para el Gimnasio" />
     <meta property="og:description" content="Entrena. Compite. Conecta. La red social fitness más innovadora." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="src/assets/icon/icon_light.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="src/assets/icon/icon_light.png" />
+
+    <!-- apple touch icon -->
+    <link rel="apple-touch-icon" href="src/assets/icon/icon_light.png" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <meta name="apple-mobile-web-app-title" content="Tribbe - App Fitness" />
   </head>
 
   <body>
